Changes for 2.2.12rc1

New features:
A......... [ZBX-9859] improved performance of screen.get method for an unprivileged user (Sasha)

Bug fixes:
........S. [ZBX-9458] fixed low level discovery macro substitution in calculated item formulas (wiper)
..F....... [ZBX-10110] fixed using Japanese in global search (Gunars)
..F....... [ZBX-10099] fixed buffer flushing error when executing script on a host (Gunars)
..F....... [ZBX-10077] fixed deleting of profile data for current user (Gunars)
...G...... [ZBX-10126] fixed compilation error in sensors.c on Linux 2.4 kernels (gleb)
........S. [ZBX-10084] fixed removing trigger-related network map elements (viktors)
........S. [ZBX-9928] fixed triple SMS being sent by single action with Cinterion MC35i modem (wiper)
.......PS. [ZBX-9931] removed 2KB item key length limitation when sent to agent (viktors)
...G...... [ZBX-9932] removed 1KB zabbix_get item key length limitation (viktors)
..F....... [ZBX-9820] fixed overview of items and triggers with same name and multiple hosts (Gunars, Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.11

2.2.11rc1 was released as 2.2.11 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.11rc1

New features:
..F....... [ZBX-2616] update bundled DejaVu font from 2.34 to 2.35 (Richlv)
A.F....... [ZBX-1357] updated Czech, Italian and Russian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-8235] fixed losing initial values when updating templated items (Gunars)
A......... [ZBX-9935] added check for item delay, to be between 0 and 86400 seconds (vitalijs)
...G...... [ZBX-9967] fixed agent compilation error on NetBSD 7 (dimir)
.D........ [ZBX-9347] added information about zabbix_sender input file format to the man page (dimir, Richlv)
..F....... [ZBX-9919] fixed y scale calculation for linear graphs (vitalijs)